2002-05-28  Bruno Haible  <bruno@clisp.org>

	* localename.c (LANG_SORBIAN): Provide a default value, for mingw32.
	Reported by Michael Opdenacker <m-opdenacker@ti.com>
	and Rob Leslie <rob@mars.org>.

2002-05-09  Bruno Haible  <bruno@clisp.org>

	* config.charset: Update for newest glibc. Add canonical names
	ISO-8859-14, KOI8-T, TCVN5712-1, GEORGIAN-PS.

2002-05-09  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases): Add more Windows specific
	aliases.

2002-05-08  Owen Taylor  <otaylor@redhat.com>

	* config.charset: A few additions for Solaris.

2001-12-05  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (locale_charset): Don't return an empty string.

2001-10-23  Bruno Haible  <haible@clisp.cons.org>

	* config.charset: msdos in uk_UA uses CP1125.

2001-08-05  Bruno Haible  <haible@clisp.cons.org>

	Make it possible to build libcharset with CC=gcc CFLAGS="-x c++".
	* localcharset.c (locale_charset): Declare as extern "C".
	(get_charset_aliases): Cast malloc and realloc results to 'char *'.

2002-04-30  Bruno Haible  <bruno@clisp.org>

	* loadmsgcat.c (_nl_init_domain_conv): Don't append //TRANSLIT to
	the encoding if it already has slashes.
	Reported by Perry Rapp <prapp@erols.com>.

2002-04-27  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h: Redirect every function to the one prefixed with
	"libintl_". Remove __OPTIMIZED variants.
	* gettextP.h: Use prefix "libintl_" instead of suffix "__".
	* dcigettext.c: Likewise.
	* dcgettext.c: Likewise.
	* dgettext.c: Likewise.
	* gettext.c: Likewise.
	* dcngettext.c: Likewise.
	* dngettext.c: Likewise.
	* ngettext.c: Likewise.
	* textdomain.c: Likewise.
	* bindtextdom.c: Likewise.
	* plural-exp.h: Likewise.
	* os2compat.c: Likewise.
	* intl-compat.c: Likewise.

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.2 released.

2002-04-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 2:1:0.

2002-04-19  Bruno Haible  <bruno@clisp.org>
